# Stock-Market-Simulator

./: .gitmodules  CMakeLists.txt  README.md  assets.cpp  data.cpp  data.h  data.hpp  data.ui  deposit.cpp  deposit.h  deposit.ui  details.cpp  details.h  details.ui  history.cpp  history.h  history.ui  portfolio.cpp  portfolio.h  portfolio.ui  serializer.cpp  serializer.h  serializer.hpp  serializer.ui  startmenu.cpp  startmenu.h  startmenu.ui  test.cpp  tradinginstruments.cpp  tradinginstruments.h  withdrawal.cpp  withdrawal.h
api-tech/: data.cpp  data.hpp  serializer.cpp  test.cpp
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-b668c5f6d3d4bdb1a83f.json  cmakeFiles-v1-70ae331473e2850c25fa.json  codemodel-v2-b198080565fef4b916f9.json  directory-.-Debug-04083506b5c3d2ceac23.json  index-2024-06-02T17-08-05-0955.json  target-gui-Debug-d4842bed2d32761d1a34.json  target-gui_autogen-Debug-b30d957a9b4c0ecc8f4b.json  target-gui_autogen_timestamp_deps-Debug-8d6021502a2ea6eb2f70.json
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.946CF450CE4CB39E.idx  qmainwindow.h.33096ED572B5D463.idx  qtmetamacros.h.FF143342737E3E03.idx  startmenu.cpp.645FCEA0821B6E03.idx  startmenu.h.668457D72E214362.idx
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/data/: history.csv
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/gui_autogen/: deps
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/gui_autogen/EWIEGA46WW/: moc_startmenu.cpp  moc_startmenu.cpp.d
build-gui-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/gui_autogen/include/: ui_startmenu.h
data/: instruments.csv  record.csv  records.csv
gui/: CMakeLists.txt  chart.cpp  chart.h  chart.ui  deposit.ui  details.cpp  details.h  details.ui  history.cpp  history.h  history.ui  main.cpp  portfolio.cpp  startmenu.cpp  startmenu.h  startmenu.ui  tradinginstruments.cpp  tradinginstruments.h  tradinginstruments.ui  withdrawal.cpp  withdrawal.ui
gui/data/: history.csv  instruments.csv
